# fleur

./: .gitignore  README.md  create_signed_dmg.sh  index.html  install.sh  package-lock.json  package.json  release.sh  sign_app.sh  tailwind.config.js  vite.config.ts
.cursor/rules/: general.mdc
.github/workflows/: test.yml
docs/: README.md
scripts/: dev.sh  generate_icons.sh  test
src/: App.css  App.tsx  appRegistry.ts  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  latest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos/: entitlements.plist
src-tauri/src/: app.rs  app_config.rs  clients.rs  environment.rs  lib.rs  main.rs  os.rs
src-tauri/tests/: app.rs  environment.rs  file_utils.rs  test_app_installation.rs  test_environment_setup.rs
src-tauri/tests/common/: mod.rs
src/components/app/: AppDescription.tsx  AppDetail.tsx  AppHeader.tsx  AppIcon.tsx  AppInformation.tsx  AppInstallButton.tsx  AppListItem.tsx  AppRatings.tsx  AppScreenshots.tsx  AppWhatsNew.tsx  ClientSelector.tsx  TextMarkdown.tsx  feedback.tsx  home.tsx  onboarding-settings.tsx  search-input.tsx  settings.tsx
src/components/app/configuration/: ConfigurationMenu.tsx  InputSetupItem.tsx  TextSetupItem.tsx  index.ts
src/components/onboarding/: InstallMcp.tsx  OnboardingScreen.tsx
src/components/ui/: dialog.tsx  drag-region.tsx  loader.tsx
src/lib/: data.ts  hasConfig.ts  onboarding.ts  update-tauri-theme.ts
src/routes/: __root.tsx  app.$name.tsx  index.tsx
src/store/: app.ts  search.ts
src/types/: analytics.d.ts  app-state.ts  clients.ts
src/types/components/: app.ts
