[package]
name = "fleur"
version = "0.1.7"
description = "A GUI to manage your MCPs"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fleur_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.9", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
lazy_static = "1.4.0"
log = "0.4"
simplelog = { version = "0.12", features = ["local-offset"] }
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.4", features = ["v4"] }
serial_test = "2.0"
fleur = { path = ".", features = ["test-utils"] }

[features]
test-utils = []

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Add configuration for Cargo to optimize compilation
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Helps with faster incremental builds on some platforms
incremental = true

[profile.test]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "thin"
incremental = false
codegen-units = 1  # Enables better optimization, slower compilation
